fixed hero layout on mobile

--- a/docs/website/theme/resources/styles/main/hero.scss
+++ b/docs/website/theme/resources/styles/main/hero.scss
@@ -19,7 +19,7 @@
 }
 
 .hero.is-halfheight {
-    @media screen and (min-width: 769px) and (max-width: 1023px) {
+    @media screen and (max-width: 1023px) {
         .hero-body {
             padding-top: 4rem;
             padding-bottom: 3rem;
